# RecipeForADisaster

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  FUNCTIONAL_TESTING_GUIDE.md  LICENSE  PRODUCTION_DEPLOYMENT.md  PULL_REQUEST_SUMMARY.md  README.md  RecipeManager  build.sh  cmake_configure_log.txt  deploy-production.sh  docker-compose.yml  health-check.sh  recipes.db  setup-dev.sh  test_api.py  users.db  vcpkg.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: issue-reporting.md
.github/workflows/: action-items-ai.md  cmake-multi-platform.yml
docs/: ADVANCED_SEARCH.md  AUTHENTICATION_SUMMARY.md  AUTH_API.md  JWT_MIDDLEWARE_TESTS.md
frontend/: jest.config.js  lighthouse-pwa-report.json  lighthouse-report.json  package-lock.json  package.json  validate-pwa.js  workbox-config.js
frontend/public/: index.html  manifest.json  pwa-test.html  sw.js
frontend/src/: App.css  App.test.tsx  App.tsx  index.tsx
frontend/src/components/: AIGeneration.tsx  AdvancedSearch.css  AdvancedSearch.tsx  CollectionForm.tsx  CollectionList.tsx  CollectionView.tsx  Login.test.tsx  Login.tsx  OfflineIndicator.css  OfflineIndicator.tsx  PWAInstallPrompt.css  PWAInstallPrompt.tsx  ProfileEdit.tsx  ProfileView.tsx  PromptBuilder.tsx  PushNotificationSettings.css  PushNotificationSettings.tsx  RecipeDetails.tsx  RecipeForm.tsx  RecipeList.test.tsx  RecipeList.tsx  RecipePreview.tsx  Register.test.tsx  Register.tsx
frontend/src/contexts/: AuthContext.test.tsx  AuthContext.tsx
frontend/src/data/: promptTemplates.ts
frontend/src/hooks/: usePushNotifications.ts
frontend/src/services/: api.ts
frontend/src/types/: Recipe.ts
include/: authService.h  collection.h  collectionManager.h  common_utils.h  jwtMiddleware.h  jwtService.h  user.h  userManager.h  vault_client.hpp
nginx/: nginx.conf
scripts/: start-vault.sh
src/: Recipe.cpp  Recipe.h  RecipeManager.cpp  RecipeManager.h  aiService.cpp  aiService.h  authService.cpp  collection.cpp  collectionManager.cpp  common_utils.cpp  dbconnect.cpp  jwtMiddleware.cpp  jwtService.cpp  main.cpp  main_sqlite.cpp  recipe.cpp  recipe.h  recipeManager.cpp  recipeManager.h  recipeManagerSQLite.cpp  recipeManagerSQLite.h  user.cpp  userManager.cpp  vaultService.cpp  vaultService.h  vault_client.cpp  web_server.cpp
tests/: test_ai_service.cpp  test_auth_api.sh  test_auth_service.cpp  test_integration.cpp  test_jwt_service.cpp  test_recipe.cpp  test_recipe_manager.cpp  test_validation.cpp  test_vault.cpp
